<resources>
    <string name="app_name">hcaptcha-example</string>
    <string name="reset">Reset</string>
    <string name="setup">Setup</string>
    <string name="verify">Verify</string>
    <string name="mark_used">Mark used</string>
    <string name="radar_session">Radar</string>
    <string name="loading">Loading</string>
    <string name="web_view_debug">Web Debug</string>
    <string name="hw_accel">Disable HW Accel</string>
    <string name="hide_dialog">Hide Dialog</string>
    <string name="hit_test">Hit test</string>
</resources>