<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Spinner
            android:id="@+id/sizes"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:spinnerMode="dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:checked="true"
            android:text="@string/loading"
            style="@style/CheckBoxText" />
        <CheckBox
            android:id="@+id/hide_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:checked="false"
            android:text="@string/hide_dialog"
            style="@style/CheckBoxText" />
        <CheckBox
            android:id="@+id/webViewDebug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:checked="false"
            android:text="@string/web_view_debug"
            style="@style/CheckBoxText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/mark_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_used"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:background="@android:color/holo_green_light"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Token: "
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tokenTextView"
            android:text="-"
            android:textColor="@android:color/white"
            android:ellipsize="end"
            android:maxLines="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@android:color/holo_red_light"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Error:   "
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/errorTextView"
            android:text="-"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/hit_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hit_test"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</LinearLayout>
